# czech_embedding_benchmark

./: .gitignore  main.py  pyproject.toml
configs/: retrieval_evaluation.toml
data/: create_synthetic.py
dataloaders/: __init__.py  czech_text_document.py  msmarco.py
evaluation/: config.py  evaluate.py  evaluate_synthetic_mteb.py
evaluation/tasks/: msmarco_retrieval.py
evaluation/utils/: model_factory.py  mteb_runner.py
experiments/: create_synthetic_czech_text_document.py  evaluate_multilingual_e5.py
models/: __init__.py  azure_embedder.py  azure_llm.py
