[project]
name = "czech-embedding-benchmark"
version = "0.3.0"
description = "Evaluation and comparison of multilingual and Czech-specific embedding models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "pyclean>=3.7.0",
    "datasets>=3.0.0",
    "deepeval>=4.0.5",
    "dotenv>=0.9.9",
    "langchain-openai>=1.2.2",
    "mteb>=2.12.30",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
]
